# Wordle

./: .gitignore  CMakeLists.txt  README.md  Wordle.cpp  Wordle.h  main.cpp  wordList.txt
Google_Tests/: CMakeLists.txt  Tests.cpp  testWords.txt
